# Nuxleus

./: .gitignore  .gitmodules  Nuxleus.VS2008.sln  Nuxleus.VS2010.sln  Nuxleus.build  Nuxleus.sln  README  conaryrc  nux.build
4Suite/: CONARY
Amara/: CONARY
Amplee/: Amplee.recipe  CONARY
Axon/: Axon.recipe
BitSharp/: BitSharp.recipe  CONARY  build.sh
BrightContent/: CONARY  build.sh
CherryPy/: CONARY  CherryPy.recipe
GData.NET/: GData.NET-1093.ccs  GData.NET.recipe  gd.blogger  gd.calendar  gd.gbase_demo  gd.gbase_queryexample  gdata.pc
IronPython-MS-Dev/: IronPython-MS-Dev.recipe  build.sh  site.py
IronRuby/: CONARY  IronRuby.recipe  ironruby.pc  rbx  staticObject.patch
Nuxleus/: Nuxleus.csproj  Nuxleus_TemporaryKey.pfx
Nuxleus.Azure/: Agent.cs  ExceptionExtensions.cs  IMessageQueue.cs  IMessageQueueFactory.cs  LinqToSqlRepository.cs  Nuxleus.Azure.csproj
Nuxleus.Command/: Nuxleus.Command.csproj
Nuxleus.Core/: Nuxleus.Core.csproj
Nuxleus.Data/: Nuxleus.Data.csproj
Nuxleus.Extension/: Nuxleus.Extension.csproj
Nuxleus.Extension.Aws/: Nuxleus.Extension.Aws.csproj
Nuxleus.Geo/: Nuxleus.Geo.csproj
Nuxleus.Messaging/: Nuxleus.Messaging.csproj
Nuxleus.PubSub/: Nuxleus.PubSub.csproj
Nuxleus.Service/: Nuxleus.Service.csproj  Nuxleus.Service.csproj~
Nuxleus.Web/: Nuxleus.Web.csproj  Settings.cs
PlanetVenus/: CONARY  build.sh  makefile
Ruby.NET/: CONARY  Ruby.NET.recipe  rubynet  rubynet.pc
Saxon.NET/: CONARY  Saxon.NET-8.8Nsvn.ccs  Saxon.NET.recipe  build.sh  gac-install-list  gacinstalllist  makefile  query
Xameleon/: CONARY  TransformResponse.cs  Xameleon.csproj  Xameleon.recipe  build.sh
amibuild/: dedup-list.xml
boto/: CONARY  boto.recipe
bridge/: CONARY  bridge.recipe
cli-gac-tag/: CONARY  cli-gac-handler  cli-gac-tag.recipe
distro-release/: CONARY  distro-release.recipe
doc/: AWSSDK.xml  Nuxleus.Command.xml  Nuxleus.Core.xml  Nuxleus.Messaging.XML  Nuxleus.PubSub.xml  Nuxleus.Service.xml  (+2 more)
nuxleus/src/Nuxleus.Extension.Aws.Sdb/src/: Attribute.cs  BasicSample.cs  Domain.cs  GetAttributesResponse.cs  HttpQueryConnection.cs  IAwsConnection.cs  Item.cs  ListDomainsResponse.cs  ListResponse.cs  Makefile.am  QueryResponse.cs  Response.cs  Sdb.cs  SdbConnection.cs  SdbException.cs  sdb-sharp.keys
nuxleus/src/Nuxleus.Extension.Aws.Sdb/src/Xameleon/Function/: AWSSimpleDBFunctions.cs
(+4720 files in other folders)
